syntax = "proto3";

message AliasGroupProto {
  repeated string aliases = 1;
  map<string, int32> categories = 2;
}

message AliasGroupsMap {
  map<string, AliasGroupProto> alias_groups = 1;
}
